docker/envoy.yaml
# Envoy proxy configuration for load balancing multiple mongot instances
# This mirrors the managed Envoy setup used by MongoDB Kubernetes Operator
# when spec.replicas > 1 for MongoDBSearch resources

admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
  - name: mongot_listener
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 27028
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: mongot_grpc
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: mongot_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                  grpc: {}
                route:
                  cluster: mongot_cluster
                  timeout: 0s
                  max_stream_duration:
                    grpc_timeout_header_max: 0s
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          # Enable HTTP/2 for gRPC
          http2_protocol_options:
            allow_connect: true

  clusters:
  - name: mongot_cluster
    connect_timeout: 5s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    # Enable HTTP/2 for gRPC communication
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http2_protocol_options: {}
    load_assignment:
      cluster_name: mongot_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: mongot-1
                port_value: 27028
            health_check_config:
              port_value: 9946
        - endpoint:
            address:
              socket_address:
                address: mongot-2
                port_value: 27028
            health_check_config:
              port_value: 9946
    # Health checks using mongot metrics endpoint
    health_checks:
    - timeout: 5s
      interval: 10s
      unhealthy_threshold: 3
      healthy_threshold: 2
      http_health_check:
        path: "/metrics"
        expected_statuses:
        - start: 200
          end: 299
